footer til topical

--- a/topical.html
+++ b/topical.html
@@ -182,56 +182,51 @@
 
 
     <!--FOOTER-->
-    <footer class="bottom">
+    <footer class="footer-topical">
         <div class="container-footer">
             <div class="logo-kolonne">
-                <a href="#" class="logo-footer"></a>
-                <ui class="sosiale-medier">
+                <ui class="sosiale-medier-topical">
                     <li>
                         <a class="sosiale-link" href="#">
                             <i class="fab fa-facebook"></i> <!--facebok-ikon -->
                         </a>
-                    </li>
 
+                    </li>
                     <li>
                         <a class="sosiale-link" href="#">
                             <i class="fab fa-instagram"></i><!-- instagram-ikon -->
                         </a>
                     </li>
-
                     <li>
                         <a class="sosiale-link" href="#">
                             <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
                         </a>
                     </li>
-
                     <li>
                         <a class="sosiale-link" href="#">
                             <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                         </a>
                     </li>
-
-                    <li>
-
-
                 </ui>
-                <p class="copyright">Copyright &copy; </p>
             </div>
+
 
             <div class="adresse-kolonne">
-                <p class="adresse-tittel">Contact</p>
+                <p class="adresse-tittel">Kontakt oss </p>
                 <address class="kontakt">
                     <p class="address">
-                        Universalgata 23 0987
+                        Pilestredet 35. Studenttorget
                     </p>
                     <p class="adresse-link">
-                        <a class="footer-link" href="tel">22-22-22-22</a><br />
-                        <a class="footer-link" href="mailto:hello@omnifood.com">universaldesign@contact.com</a>
+                        <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
+                        <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
                     </p>
                 </address>
-
-                <i class="fas fa-desktop"></i>
             </div>
+        </div>
+        <div class="copyright">
+            <p class="copyright">Copyright &copy; </p>
+        </div>
     </footer>
 </body>
 
