--- a/accessibility.html
+++ b/accessibility.html
@@ -76,7 +76,6 @@
                  </a>
              </li>
          </ui>
-         <p class="copyright">Copyright &copy; </p>
  
      </div>
      <div class="adresse-kolonne">
@@ -94,6 +93,8 @@
            </p>
          </address>
      </div>
+    </div>
+    <p class="copyright">Copyright &copy; </p>
  
  </footer>
 
