--- a/campus.html
+++ b/campus.html
@@ -1,26 +1,145 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Campus</title>
     <link href="./css/stylesheet.css" rel="stylesheet" />
     <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Lenker til fonter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
-        <ul class="navigations">
-        <li class="button"><a href="./index.html">Home</a></li>
-        <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-        <li class="button"><a href="./topical.html">Topical page</a></li>
-        <li class="button"><a href="./campus.html">Our campus</a></li>
-        </ul>
-    </nav>
-    
+    <main> 
+        <section>
+        <header>
+            <nav>
+                <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
+                <ul class="navigations">
+                <li class="button"><a href="./index.html">Home</a></li>
+                <li class="button"><a href="./accessibility.html">Accessibility</a></li>
+                <li class="button"><a href="./topical.html">Topical page</a></li>
+                <li class="button"><a href="./campus.html">Our campus</a></li>
+                </ul>
+            </nav>
+        </header>
+        </section>
+        <section>
+        <div class="campus-container">
+            <img class="image-container"src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"
+            loading="lazy"/>
+            <div class="item">
+            <h1 class="campus-overskrift">Campus</h1>
+            <p class="campus-undertittel">Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Tortor consequat id porta nibh venenatis
+                cras.Tempus urna et pharetra pharetra massa massa ultricies. 
+                Vestibulum morbi blandit cursus risus at
+                ultrices mi tempus.Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Tortor consequat id porta nibh venenatis
+                cras.Tempus urna et pharetra pharetra massa massa ultricies. 
+                Vestibulum morbi blandit cursus risus at
+                ultrices mi tempus. Tortor consequat id porta nibh venenatis
+                cras.Tempus urna et pharetra pharetra massa massa ultricies. 
+            </p>
+            </div>
+        </div>
+        </section>
+        <hr>
+        <section>
+        <div class="campus-oversikt">
+            <h2 class="oversiktstittel">Studentfasiliteter på p35:</h2>
+            <p class="oversiktsparagraf"> Tortor consequat id porta nibh venenatis
+                cras.Tempus urna et pharetra pharetra massa massa ultricies. 
+                Vestibulum morbi blandit cursus risus at
+                ultrices mi tempus. Tortor consequat id porta nibh venenatis
+                cras.Tempus urna et pharetra pharetra massa massa ultricies. Tortor consequat id porta nibh venenatis
+                cras.Tempus urna et pharetra pharetra massa massa ultricies. 
+                Vestibulum morbi blandit cursus risus at
+                ultrices mi tempus. Tortor consequat id porta nibh venenatis
+                cras.Tempus urna et pharetra pharetra massa massa ultricies.</p>
+        </div>
+        </section>
+        <section>
+            <div class="studiesal-container">
+            <img class="image-container" src="./images/Stillerom.jpeg" alt="Bildet av utsiden av p35"
+            loading="lazy"/><img class="image-container" src="./images/Studiesal.jpeg" alt="Bildet av utsiden av p35"
+            loading="lazy"/>
+                <div class="campus-oversikt">
+                <h3 class>Stillerom:</h3>
+                <ul class="campus-fasiliter">
+                    <li>consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                    <li>Tortor consequat id porta nibh venenatis
+                        cras.Tempus urna et pharetra pharetra massa massa ultricies.</li>
+                    <li> Vestibulum morbi blandit cursus risus at
+                        ultrices mi tempus.Lorem ipsum dolor sit amet, 
+                        consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                    <li>Tortor consequat id porta nibh venenatis
+                        cras.</li>
+                    <li>Vestibulum morbi blandit cursus risus at.</li>
+                </ul>
+                </div>
+            </div>
+        </section>
+         <!--FOOTER-->
+        <!--FOOTER-->
+        <footer class="footer">
+            <div class="container-footer">
+                <div class="logo-kolonne">
+                    <a href="#" class="logo-footer">
+                        <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
+                    </a>
+
+                    <ui class="sosiale-medier">
+                        <li>
+                            <a class="sosiale-link" href="#">
+                                <i class="fab fa-facebook"></i> <!--facebok-ikon -->
+                            </a>
+
+                        </li>
+                        <li>
+                            <a class="sosiale-link" href="#">
+                                <i class="fab fa-instagram"></i><!-- instagram-ikon -->
+                            </a>
+                        </li>
+                        <li>
+                            <a class="sosiale-link" href="#">
+                                <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
+                            </a>
+                        </li>
+                        <li>
+                            <a class="sosiale-link" href="#">
+                                <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
+                            </a>
+                        </li>
+                    </ui>
+                </div>
+                <div class="adresse-kolonne">
+                    <p class="adresse-tittel">Kontakt oss </p>
+                    <address class="kontakt">
+                        <p class="address">
+                            Pilestredet 35. Studenttorget
+                        </p>
+                        <p class="adresse-link">
+                            <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
+                            <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
+                        </p>
+                    </address>
+                </div>
+            </div>
+            <div class="copyright">
+                <p class="copyright">Copyright &copy; </p>
+            </div>
+        </footer>
+    </main> 
 </body>
 </html>
