--- a/topical.html
+++ b/topical.html
@@ -239,4 +239,7 @@
     Nav topical hvorfor ligger overskritene og boksene på ulik høyde
     hvordan få bilde til å dekke øvre delen av skjermen?
 
+    Fixed nav på alle sider 
+    media query greia 
+    mobil visning 
 -->
