--- a/campus.html
+++ b/campus.html
@@ -30,11 +30,10 @@
         </section>
         <section>
         <div class="campus-container">
-            <img class="image-container"src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"
-            loading="lazy"/>
+            <img class="image-container"src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"/>
             <div class="item">
             <h1 class="campus-overskrift">Campus</h1>
-            <p class="campus-undertittel">Lorem ipsum dolor sit amet, 
+            <p class="campus-intro">Lorem ipsum dolor sit amet, 
                 consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Tortor consequat id porta nibh venenatis
@@ -54,7 +53,6 @@
         </section>
         <hr>
         <section>
-        <div class="campus-oversikt">
             <h2 class="oversiktstittel">Studentfasiliteter på p35:</h2>
             <p class="oversiktsparagraf"> Tortor consequat id porta nibh venenatis
                 cras.Tempus urna et pharetra pharetra massa massa ultricies. 
@@ -65,14 +63,12 @@
                 Vestibulum morbi blandit cursus risus at
                 ultrices mi tempus. Tortor consequat id porta nibh venenatis
                 cras.Tempus urna et pharetra pharetra massa massa ultricies.</p>
-        </div>
         </section>
         <section>
             <div class="studiesal-container">
-            <img class="image-container" src="./images/Stillerom.jpeg" alt="Bildet av utsiden av p35"
-            loading="lazy"/><img class="image-container" src="./images/Studiesal.jpeg" alt="Bildet av utsiden av p35"
-            loading="lazy"/>
-                <div class="campus-oversikt">
+            <img class="image-container" src="./images/Stillerom.jpeg" alt="Bildet av stillerompå av p35"/>
+            <img class="image-container" src="./images/Studiesal.jpeg" alt="Bildet av labrator på p35"/>
+                <div class="stillerom-oversikt">
                 <h3 class>Stillerom:</h3>
                 <ul class="campus-fasiliter">
                     <li>consectetur adipiscing elit, sed do
