--- a/topical.html
+++ b/topical.html
@@ -21,9 +21,9 @@
     
                 <ul class="navigations">
                     <li class="button"><a href="./index.html">Home</a></li>
-                    <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-                    <li class="button"><a href="./topical.html">Topical page</a></li>
                     <li class="button"><a href="./campus.html">Our campus</a></li>
+                    <li class="button"><a href="./topical.html">Topical page</a></li>
+                    <li class="button"><a href="./accessibility.html">Accessibility</a></li>
                 </ul>
         </div>
         </nav>
@@ -31,7 +31,7 @@
 
     <main class="topicalmain">
         <section class="video">
-            <video src="./images/video (360p).mp4" muted loop autoplay></video>
+            <video src="./images/video (540p) (1).mp4" muted loop autoplay></video>
         </section>
 
         <h2 class="smartphones"> Smartphones</h2>
