--- a/topical.html
+++ b/topical.html
@@ -12,20 +12,21 @@
 
 <body class="topical">
     <header>
-        <div class="fixedpositionnav">
             <nav class="topicalnav">
                 <div class="overskrift">
                     <h1 class="overskrift1">Universal </h1>
                     <h1 class="overskrift2"> Design</h1>
                 </div>
-    
-                <ul class="navigations">
+    <div>
+                <ul class="navigations-topical">
                     <li class="button"><a href="./index.html">Home</a></li>
-                    <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-                    <li class="button"><a href="./topical.html">Topical page</a></li>
                     <li class="button"><a href="./campus.html">Our campus</a></li>
+                    <li class="button"><a href="./topical.html">Topical page</a></li>
+                    <li class="button"><a href="./accessibility.html">Accessibility</a></li>
+
                 </ul>
-        </div>
+    </div>
+    
         </nav>
     </header>
 
@@ -215,11 +216,11 @@
                 <p class="adresse-tittel">Kontakt oss </p>
                 <address class="kontakt">
                     <p class="address">
-                        Pilestredet 35. Studenttorget
+                        Universalgata 23 0987
                     </p>
                     <p class="adresse-link">
-                        <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
-                        <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
+                        <a class="footer-link" href="tel:67-45-78-00">22-22-22-22</a><br />
+                        <a class="footer-link" href="mailto:hello@omnifood.com">universaldesign@contact.com</a>
                     </p>
                 </address>
             </div>
