--- a/index.html
+++ b/index.html
@@ -35,21 +35,56 @@
         </nav>
     </div>
 
-    <div class="content">
-        <img class="index-images" src="./images/P35-2400-1200.jpeg"
+    <div class="main-content">
+        <div class="index-image">
+            <img src="./images/P35-2400-1200.jpeg"
             alt="OsloMet campus . av Mina K. Abrahamsen / OsloMet">
-        <div class="introduction">
+        </div>
+        
+        <div class="introductions">
             <h1>Velkommen til Oslomet</h1>
-            <p class="avsnitt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            <div class="introductions-content">
+                <h2>DATA1200 Eksamen høst 2023</h2>
+                <p class="avsnitt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor consequat id porta nibh venenatis
                 cras.
                 Tempus urna et pharetra pharetra massa massa ultricies. Vestibulum morbi blandit cursus risus at
                 ultrices mi tempus.
                 Tincidunt eget nullam non nisi est sit amet facilisis. Neque laoreet suspendisse interdum consectetur.
-            </p>
+                </p>
+            </div>
         </div>
         <div class="news-articles">
-            <h1>Nyheter</h1>
+            <h2>Nyheter</h2>
+        </div>
+        <div class="news-tabs">
+            <div class="articles">
+                <div class="articles-picture">
+                <img src="./images/CampusSommer-26.jpg" alt="campus 4" class="cover-it">
+                </div>
+                <div class="articles-content">
+                    <a href=""><h3>Accessiblity across the page</h3></a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <div class="articles">
+                <div class="articles-picture" alt="campus 1">
+                <img src="./images/CampusSommer-12.jpg">
+                </div>
+                <div class="articles-content" alt="campus 2">
+                <a href=""><h3>The Oslomet Campus</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+                </div>
+            </div>
+            <div class="articles">
+                <div class="articles-picture" alt="campus 3">
+                <img src="./images/CampusSommer-61.jpg">
+                </div>
+                <div class="articles-content">
+                    <a href="#"><h3>Topical page title</h3></a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    </div>
+            </div>
         </div>
     </div>
 
