utropstegn på index

--- a/campus.html
+++ b/campus.html
@@ -66,8 +66,8 @@
         </section>
         <section>
             <div class="studiesal-container">
-            <img class="image-container" src="./images/Stillerom.jpeg" alt="Bildet av stillerompå av p35"/>
-            <img class="image-container" src="./images/Studiesal.jpeg" alt="Bildet av labrator på p35"/>
+            <img class="image-container1" src="./images/Stillerom.jpeg" alt="Bildet av stillerompå av p35"/>
+            <img class="image-container2" src="./images/Studiesal.jpeg" alt="Bildet av labrator på p35"/>
                 <div class="stillerom-oversikt">
                 <h3 class>Stillerom:</h3>
                 <ul class="campus-fasiliter">
