--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img class="index-images" src="./images/P35-2400-1200.jpeg"
             alt="OsloMet campus . av Mina K. Abrahamsen / OsloMet">
         <div class="introduction">
-            <h1>Velkommen til Oslomet</h1>
+            <h1>Velkommen til Oslomet!</h1>
             <p class="avsnitt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor consequat id porta nibh venenatis
                 cras.
