--- a/topical.html
+++ b/topical.html
@@ -12,36 +12,26 @@
 
 <body class="topical">
     <header>
+        <div class="fixedpositionnav">
             <nav class="topicalnav">
                 <div class="overskrift">
                     <h1 class="overskrift1">Universal </h1>
                     <h1 class="overskrift2"> Design</h1>
                 </div>
-    <div>
-                <ul class="navigations-topical">
+    
+                <ul class="navigations">
                     <li class="button"><a href="./index.html">Home</a></li>
                     <li class="button"><a href="./campus.html">Our campus</a></li>
                     <li class="button"><a href="./topical.html">Topical page</a></li>
                     <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-
                 </ul>
-    </div>
-    
+        </div>
         </nav>
     </header>
 
     <main class="topicalmain">
-<<<<<<< Updated upstream
         <section class="video">
-<<<<<<< Updated upstream
-            <video src="./images/video (360p).mp4" muted loop autoplay></video>
-=======
-        <section>
             <video src="./images/video (540p) (1).mp4" muted loop autoplay></video>
->>>>>>> Stashed changes
-=======
-            <video src="./images/pexels_videos_946147 (720p).mp4" muted loop autoplay></video>
->>>>>>> Stashed changes
         </section>
 
         <h2 class="smartphones"> Smartphones</h2>
@@ -109,13 +99,12 @@
 
         <hr>
 
-
         <div class="midtdel">
             <div class="smarthphonesusage">
                 <h2>
                     The current usage of smartphones in everyday life
                 </h2>
-                <p class="topical-p">
+                <p class="smarthphonesusage-p">
                     Smartphones are widely used in the world and almost
                     everyone has one. Most people rely on their smartphones to
                     communicate with others and really depend on them to get
@@ -135,7 +124,7 @@
                 <h2 part="fails-p">
                     Three ways this technology fails to comply with key principles in universal design
                 </h2>
-                <p class="topical-p">
+                <p>
                     The first problem with this technology is that it has a
                     complicated and advanced design, especially for elder people.
                     It could be difficult to navigate through the phone and even
@@ -155,7 +144,7 @@
                 <h2>
                     Three ways this technology complies with key principles in universal design
                 </h2>
-                <p class="topical-p">
+                <p class="complies-p">
                     Smartphones have many great built-in features that make it
                     easier for people to use them such as screen readers, size
                     adjustments and voice commands. This makes the technology
@@ -172,7 +161,7 @@
                     What is the potential impact of a strict enforcement of universal
                     design on all digital products?
                 </h2>
-                <p class="topical-p">
+                <p class="impact-p">
                     First of all, more people will be able to use the products and
                     they will be more user-friendly. This will make digital products
                     more accessible and included to all people in society. If the
@@ -188,7 +177,6 @@
             </div>
         </div>
     </main>
-
 
 
     <!--FOOTER-->
@@ -220,16 +208,15 @@
                 </ui>
             </div>
 
-
             <div class="adresse-kolonne">
                 <p class="adresse-tittel">Kontakt oss </p>
                 <address class="kontakt">
                     <p class="address">
-                        Universalgata 23 0987
+                        Pilestredet 35. Studenttorget
                     </p>
                     <p class="adresse-link">
-                        <a class="footer-link" href="tel:67-45-78-00">22-22-22-22</a><br />
-                        <a class="footer-link" href="mailto:hello@omnifood.com">universaldesign@contact.com</a>
+                        <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
+                        <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
                     </p>
                 </address>
             </div>
@@ -239,8 +226,8 @@
         </div>
     </footer>
 </body>
-</html>
 
+</html>
 
 <!--
 
