--- a/topical.html
+++ b/topical.html
@@ -12,20 +12,21 @@
 
 <body class="topical">
     <header>
-        <div class="fixedpositionnav">
             <nav class="topicalnav">
                 <div class="overskrift">
                     <h1 class="overskrift1">Universal </h1>
                     <h1 class="overskrift2"> Design</h1>
                 </div>
-    
-                <ul class="navigations">
+
+                <div>
+                <ul class="navigations-topical">
                     <li class="button"><a href="./index.html">Home</a></li>
                     <li class="button"><a href="./campus.html">Our campus</a></li>
                     <li class="button"><a href="./topical.html">Topical page</a></li>
                     <li class="button"><a href="./accessibility.html">Accessibility</a></li>
                 </ul>
-        </div>
+                </div>
+      
         </nav>
     </header>
 
