--- a/campus.html
+++ b/campus.html
@@ -69,7 +69,7 @@
             <img class="image-container1" src="./images/Stillerom.jpeg" alt="Bildet av stillerompå av p35"/>
             <img class="image-container2" src="./images/Studiesal.jpeg" alt="Bildet av labrator på p35"/>
                 <div class="stillerom-oversikt">
-                <h3 class>Stillerom:</h3>
+                <h3 class="stillerom-overskirft">Stillerom:</h3>
                 <ul class="campus-fasiliter">
                     <li>consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
