--- a/topical.html
+++ b/topical.html
@@ -50,6 +50,8 @@
                         or devices that do not comply and adapt to the
                         basic principles of universal design.
                         To what degree smartphones fulfills the principles of universal design
+                        <a href="https://ec.europa.eu/social/main.jsp?catId=1202#:~:text=The%20European%20accessibility%20act%20covers,accessibility%20requirements%20across%20EU%20countries."
+                        target="_blank">European accessibility act.</a>
                     </p>
                 </div>
 
@@ -115,9 +117,7 @@
                     social media, news, navigation, and entertainment such as
                     games and movies.
                     For more information visit
-                    <a href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/"
-                        target="_blank">Insiderintelligence.
-                    </a>
+                
                 </p>
             </div>
     
