--- a/topical.html
+++ b/topical.html
@@ -44,14 +44,12 @@
 
                     <h2 class="european"> European Accessibility Act</h2> 
 
-                    <p class="topical-p">
+                    <p class="european-p">
                         Norwegian government chooses to implement the European Accessibility Act
                         into Norwegian law and is prepared to issue large fines for digital services,
                         or devices that do not comply and adapt to the
                         basic principles of universal design.
                         To what degree smartphones fulfills the principles of universal design
-                        <a href="https://ec.europa.eu/social/main.jsp?catId=1202#:~:text=The%20European%20accessibility%20act%20covers,accessibility%20requirements%20across%20EU%20countries."
-                        target="_blank">European accessibility act.</a>
                     </p>
                 </div>
 
@@ -103,11 +101,11 @@
         <hr>
 
         <div class="midtdel">
-            <div class="topical-p">
+            <div class="smarthphonesusage">
                 <h2>
                     The current usage of smartphones in everyday life
                 </h2>
-                <p class="topical-p">
+                <p class="smarthphonesusage-p">
                     Smartphones are widely used in the world and almost
                     everyone has one. Most people rely on their smartphones to
                     communicate with others and really depend on them to get
@@ -117,12 +115,14 @@
                     social media, news, navigation, and entertainment such as
                     games and movies.
                     For more information visit
-                
+                    <a href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/"
+                        target="_blank">Insiderintelligence.
+                    </a>
                 </p>
             </div>
     
             <div class="fails">
-                <h2 part="topical-p">
+                <h2 part="fails-p">
                     Three ways this technology fails to comply with key principles in universal design
                 </h2>
                 <p>
@@ -145,7 +145,7 @@
                 <h2>
                     Three ways this technology complies with key principles in universal design
                 </h2>
-                <p class="topical-p">
+                <p class="complies-p">
                     Smartphones have many great built-in features that make it
                     easier for people to use them such as screen readers, size
                     adjustments and voice commands. This makes the technology
@@ -162,7 +162,7 @@
                     What is the potential impact of a strict enforcement of universal
                     design on all digital products?
                 </h2>
-                <p class="topical-p">
+                <p class="impact-p">
                     First of all, more people will be able to use the products and
                     they will be more user-friendly. This will make digital products
                     more accessible and included to all people in society. If the
