--- a/campus.html
+++ b/campus.html
@@ -69,7 +69,7 @@
             <img class="image-container1" src="./images/Stillerom.jpeg" alt="Bildet av stillerompå av p35"/>
             <img class="image-container2" src="./images/Studiesal.jpeg" alt="Bildet av labrator på p35"/>
                 <div class="stillerom-oversikt">
-                <h3 class="stillerom-overskirft">Stillerom:</h3>
+                <h3 class="stillerom-overskrift">Stillerom</h3>
                 <ul class="campus-fasiliter">
                     <li>consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
@@ -84,6 +84,22 @@
                     <li>Vestibulum morbi blandit cursus risus at.</li>
                 </ul>
                 </div>
+                <div class="studiesal-oversikt">
+                    <h3 class="studiesal-overskrift">Studiesal:</h3>
+                    <ul class="campus-fasiliter">
+                        <li>consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        <li>Tortor consequat id porta nibh venenatis
+                            cras.Tempus urna et pharetra pharetra massa massa ultricies.</li>
+                        <li> Vestibulum morbi blandit cursus risus at
+                            ultrices mi tempus.Lorem ipsum dolor sit amet, 
+                            consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        <li>Tortor consequat id porta nibh venenatis
+                            cras.</li>
+                        <li>Vestibulum morbi blandit cursus risus at.</li>
+                    </ul>
+                    </div>
             </div>
         </section>
          <!--FOOTER-->
