--- a/topical.html
+++ b/topical.html
@@ -20,10 +20,10 @@
 
                 <div>
                 <ul class="navigations-topical">
-                    <li class="button"><a href="./index.html">Home</a></li>
-                    <li class="button"><a href="./campus.html">Our campus</a></li>
-                    <li class="button"><a href="./topical.html">Topical page</a></li>
-                    <li class="button"><a href="./accessibility.html">Accessibility</a></li>
+                    <li class="nav-buttons"><a href="./index.html">Home</a></li>
+                    <li class="nav-buttons"><a href="./campus.html">Our campus</a></li>
+                    <li class="nav-buttons"><a href="./topical.html">Topical page</a></li>
+                    <li class="nav-buttons"><a href="./accessibility.html">Accessibility</a></li>
                 </ul>
                 </div>
       
