--- a/topical.html
+++ b/topical.html
@@ -53,13 +53,11 @@
                     </p>
                 </div>
 
-                <div class="førstebilde">
+                <div class="bilder1">
                     <!-- Foto: fra nettiden Medium.com artikkelnavn: "The evolution of mobile devices" (forfatter ikke oppgitt på)
                     Link: https://medium.com/@s92063042/history-and-evolution-of-smartphones-17987e6f91d1 -->
-                    <figure class="bilder">
                         <img src="/images/smartphones.jpeg" alt="Evolution of the Mobile Phone">
                         <figcaption class="caption">Mobile phone evolution</figcaption>
-                    </figure>
                 </div>
             </div>
         </section>
@@ -86,14 +84,12 @@
                         or current concentration level. </p>
                 </div>
 
-                <div>
+                <div class="bilde2">
                     <!-- Foto: S92063042 fra nettiden techpoint.africa 
                     Artikkelnavn: Evolution of mobile phones in Nigeria: How competition made expensive phones cheap
                     Link: https://techpoint.africa/2020/02/28/mobile-phones-evolution-nigeria/ -->
-                    <figure class="bilde2">
                         <img src="./images/phones.jpeg" alt="Smartphones and mobile phones" />
                         <figcaption class="caption">Smartphones and phones</figcaption>
-                    </figure>
                 </div>
             </div>
         </section>
