--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <picture class="nav-logo">
             <img src="./images/svart_logo_oslomet.png" alt="oslomet logo svart"/>
         </picture>
-        <nav>
+        <nav class="index-nav">
             <ul class="navigations">
                     <li class="nav-buttons"><a href="./index.html">Home</a></li>
                     <li class="nav-buttons dropmenu">
