--- a/campus.html
+++ b/campus.html
@@ -16,17 +16,24 @@
 <body>
     <main> 
         <section>
-        <header>
-            <nav>
-                <img class="logo" src="./images/logo_oslomet_gul.png" alt="Oslomet logo"/>
-                <ul class="navigations">
-                <li class="button"><a href="./index.html">Home</a></li>
-                <li class="button"><a href="./campus.html">Our campus</a></li>
-                <li class="button"><a href="./topical.html">Topical page</a></li>
-                <li class="button"><a href="./accessibility.html">Accessibility</a></li>
-                </ul>
-            </nav>
-        </header>
+            <div class="main-header">
+                <picture class="nav-logo">
+                    <img src="./images/svart_logo_oslomet.png" alt="oslomet logo svart"/>
+                </picture>
+                <nav class="index-nav">
+                    <ul class="navigations">
+                            <li class="nav-buttons"><a href="./index.html">Home</a></li>
+                            <li class="nav-buttons dropmenu">
+                                <a href="javascript:void(0)" class="dropbtn">Menu</a>
+                                <div class="dropmenu-content">
+                                    <a href="./accessibility">Accessibility</a>
+                                    <a href="./topical.html">Topical page</a>
+                                    <a href="./campus.html">Our campus</a>
+                                  </div>
+                            </li>
+                    </ul>
+                </nav>
+            </div>
         </section>
         <section>
         <div class="campus-container">
@@ -108,7 +115,7 @@
             <div class="container-footer">
                 <div class="logo-kolonne">
                     <a href="#" class="logo-footer">
-                        <img class="logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
+                        <img class="nav-logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
                     </a>
 
                     <ui class="sosiale-medier">
