--- a/campus.html
+++ b/campus.html
@@ -54,23 +54,23 @@
         <hr>
         <section>
             <h2 class="oversiktstittel">Studentfasiliteter på p35:</h2>
-            <p class="oversiktsparagraf"> Tortor consequat id porta nibh venenatis
-                cras.Tempus urna et pharetra pharetra massa massa ultricies. 
-                Vestibulum morbi blandit cursus risus at
-                ultrices mi tempus. Tortor consequat id porta nibh venenatis
-                cras.Tempus urna et pharetra pharetra massa massa ultricies. Tortor consequat id porta nibh venenatis
-                cras.Tempus urna et pharetra pharetra massa massa ultricies. 
-                Vestibulum morbi blandit cursus risus at
-                ultrices mi tempus. Tortor consequat id porta nibh venenatis
-                cras.Tempus urna et pharetra pharetra massa massa ultricies.</p>
+            <p class="oversiktsparagraf"> Troin quis libero nec urna rutrum molestie. Sed a purus ac est volutpat tincidunt. 
+                Quisque gravida vitae nunc ac volutpat. Vivamus et nisl sed nunc viverra euismod. Phasellus ultrices, quam ut 
+                porttitor semper, ipsum ipsum pellentesque est, id dictum urna felis et enim. Nunc posuere est lobortis cursus mattis. 
+                Vivamus ligula nibh, imperdiet sed tristique in, sagittis id mauris. Fusce consectetur quis nulla a dignissim. Etiam eu
+                mauris imperdiet, dictum lacus et, ornare erat. Pellentesque habitant morbi tristique senectus et netus et malesuada 
+                fames ac turpis egestas. Integer bibendum accumsan condimentum. Morbi facilisis, lorem dapibus gravida dictum, tortor 
+                nibh sollicitudin ante, vitae ultricies neque est sit amet dolor. Sed consequat tellus eu maximus viverra. Sed 
+                lobortis nibh lacus.
+            </p>
         </section>
         <section>
             <div class="studiesal-container">
             <img class="image-container1" src="./images/Stillerom.jpeg" alt="Bildet av stillerompå av p35"/>
             <img class="image-container2" src="./images/Studiesal.jpeg" alt="Bildet av labrator på p35"/>
                 <div class="stillerom-oversikt">
-                <h3 class="stillerom-overskrift">Stillerom</h3>
-                <ul class="campus-fasiliter">
+                <h3 class="stillerom-overskrift">Stillerom:</h3>
+                <ul class="campus-fasiliteter">
                     <li>consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
                     <li>Tortor consequat id porta nibh venenatis
@@ -86,7 +86,7 @@
                 </div>
                 <div class="studiesal-oversikt">
                     <h3 class="studiesal-overskrift">Studiesal:</h3>
-                    <ul class="campus-fasiliter">
+                    <ul class="campus-fasiliteter">
                         <li>consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
                         <li>Tortor consequat id porta nibh venenatis
