--- a/topical.html
+++ b/topical.html
@@ -35,16 +35,15 @@
             <video src="./images/video (540p) (1).mp4" muted loop autoplay></video>
         </section>
 
+
         <h2 class="smartphones"> Smartphones</h2>
 
         <!-- Flexbox for å ha terms og introteksten side om side -->
         <section>
-            <div class="topicalflex-container">
+            <div class="europeanflex-container">
                 <div class="introtekst">
-
                     <h2 class="european"> European Accessibility Act</h2> 
-
-                    <p class="european-p">
+                    <p class="topical-p">
                         Norwegian government chooses to implement the European Accessibility Act
                         into Norwegian law and is prepared to issue large fines for digital services,
                         or devices that do not comply and adapt to the
@@ -53,7 +52,7 @@
                     </p>
                 </div>
 
-                <div class="bilder1">
+                <div class="bilde1">
                     <!-- Foto: fra nettiden Medium.com artikkelnavn: "The evolution of mobile devices" (forfatter ikke oppgitt på)
                     Link: https://medium.com/@s92063042/history-and-evolution-of-smartphones-17987e6f91d1 -->
                         <img src="/images/smartphones.jpeg" alt="Evolution of the Mobile Phone">
@@ -101,7 +100,7 @@
                 <h2>
                     The current usage of smartphones in everyday life
                 </h2>
-                <p class="smarthphonesusage-p">
+                <p class="topical-p">
                     Smartphones are widely used in the world and almost
                     everyone has one. Most people rely on their smartphones to
                     communicate with others and really depend on them to get
@@ -121,7 +120,7 @@
                 <h2 part="fails-p">
                     Three ways this technology fails to comply with key principles in universal design
                 </h2>
-                <p>
+                <p class="topical-p">
                     The first problem with this technology is that it has a
                     complicated and advanced design, especially for elder people.
                     It could be difficult to navigate through the phone and even
@@ -141,7 +140,7 @@
                 <h2>
                     Three ways this technology complies with key principles in universal design
                 </h2>
-                <p class="complies-p">
+                <p class="topical-p">
                     Smartphones have many great built-in features that make it
                     easier for people to use them such as screen readers, size
                     adjustments and voice commands. This makes the technology
@@ -158,7 +157,7 @@
                     What is the potential impact of a strict enforcement of universal
                     design on all digital products?
                 </h2>
-                <p class="impact-p">
+                <p class="topical-p">
                     First of all, more people will be able to use the products and
                     they will be more user-friendly. This will make digital products
                     more accessible and included to all people in society. If the
