--- a/topical.html
+++ b/topical.html
@@ -55,8 +55,8 @@
                 <div class="bilde1">
                     <!-- Foto: fra nettiden Medium.com artikkelnavn: "The evolution of mobile devices" (forfatter ikke oppgitt på)
                     Link: https://medium.com/@s92063042/history-and-evolution-of-smartphones-17987e6f91d1 -->
-                        <img src="/images/smartphones.jpeg" alt="Evolution of the Mobile Phone">
-                        <figcaption class="caption">Mobile phone evolution</figcaption>
+                        <img src="/images/pexels-fauxels-3184435.jpg" alt="People using smartphones">
+                        <figcaption class="caption">Smartphone addiction</figcaption>
                 </div>
             </div>
         </section>
@@ -230,4 +230,7 @@
     Fixed nav på alle sider 
     media query greia 
     mobil visning 
+
+    Legge inn kilde på video og bilder
+    Slette bilder som ikke brukes 
 -->
