--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="navigations">
                     <li class="nav-buttons"><a href="./index.html">Home</a></li>
                     <li class="nav-buttons dropmenu">
-                        <a href="javascript:void(0)" class="dropbtn">Menu</a>
+                        <a class="dropbtn">Menu</a>
                         <div class="dropmenu-content">
                             <a href="./accessibility">Accessibility</a>
                             <a href="./topical.html">Topical page</a>
