--- a/topical.html
+++ b/topical.html
@@ -74,7 +74,7 @@
                     <figcaption class="caption">Phones with handset</figcaption>
                 </div>
 
-                <div class="terms">
+                <div class="terms-topical">
                     <h2 class="topical-h2">
                         Key terms
                     </h2>
