--- a/topical.html
+++ b/topical.html
@@ -238,4 +238,6 @@
 
     Legge inn kilde på video og bilder
     Slette bilder som ikke brukes 
+
+    Fikse nav slik at jeg kan trykke inn på campus siden og home
 -->
