--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                     <li class="nav-buttons dropmenu">
                         <a class="dropbtn">Menu</a>
                         <div class="dropmenu-content">
-                            <a href="./accessibility">Accessibility</a>
                             <a href="./topical.html">Topical page</a>
                             <a href="./campus.html">Our campus</a>
+                            <a href="./accessibility.html">Accessibility</a>
                           </div>
                     </li>
             </ul>
