--- a/campus.html
+++ b/campus.html
@@ -26,9 +26,9 @@
                             <li class="nav-buttons dropmenu">
                                 <a href="javascript:void(0)" class="dropbtn">Menu</a>
                                 <div class="dropmenu-content">
-                                    <a href="./accessibility">Accessibility</a>
-                                    <a href="./topical.html">Topical page</a>
                                     <a href="./campus.html">Our campus</a>
+                                    <a href="./topical.html">Topical page</a>
+                                    <a href="./accessibility.html">Accessibility</a>
                                   </div>
                             </li>
                     </ul>
