--- a/accessibility.html
+++ b/accessibility.html
@@ -33,6 +33,26 @@
 
     <main>
 
+        <section>
+            <div class="accessibility-container">
+                <div class="accessibility-image">
+                <img src="./images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability">
+            </div>
+
+            <div class="accessibility-definasion">
+                <h1 class="definasion"> Hva er accessibility</h1>
+                <p class="beskriver-accissibility">
+                    Tilgjengelighet handler om å sørge for at alle, uavhengig av evner eller funksjonshemminger, kan få tilgang til og samhandle med et produkt, 
+                    en tjeneste eller et miljø. Det handler om å fjerne barrierer og skape inkluderende design slik at alle kan delta,
+                    bidra og nyte uten begrensninger. Dette gjelder ulike aspekter av livet, fra nettsider og teknologi til fysiske rom og kommunikasjon.
+                    I bunn og grunn handler det om å sikre lik tilgang og muligheter for alle.
+                </p>
+
+            </div>
+            
+            </div>
+        </section>
+
 
         
     </main>
